--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,14 +6,14 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		{{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css"> --}}
+		<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	</head>
 	<body>
 		{{{ body }}}
 
 	{{!-- Add in jQuery --}}
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="/assets/js/script.js"></script>
+	<script src="/js/script.js"></script>
 	</body>
 </html>
